<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="com.udacity.classroom.yongchun.tvshow.utilities.StringUtils" />
        <variable
            name="detail"
            type="com.udacity.classroom.yongchun.tvshow.model.Detail" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:title="@{detail.name}"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/image_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/thumbnail_height"
                    android:contentDescription="@string/backdrop_image"
                    android:scaleType="centerCrop"
                    app:backdropUrl="@{detail.backdropPath}"
                    app:error="@{@drawable/placeholder}"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:placeholder="@{@drawable/placeholder}"
                    tools:src="@sample/tools:backgrounds/scenic" />

                <ToggleButton
                    android:id="@+id/button_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/padding"
                    android:background="@drawable/button_follow_background"
                    android:drawableStart="@drawable/button_follow_icon"
                    android:padding="@dimen/button_padding"
                    android:textColor="@color/button_follow_text"
                    android:textOff="@string/follow"
                    android:textOn="@string/following"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding"
                    app:contentPadding="@dimen/padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/poster_image"
                            android:visibility="@{detail.posterPath != null ? View.VISIBLE : View.GONE}"
                            app:error="@{@drawable/placeholder}"
                            app:placeholder="@{@drawable/placeholder}"
                            app:posterUrl="@{detail.posterPath}"
                            tools:src="@sample/tools:avatars" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingEnd="@dimen/padding"
                            android:paddingStart="@dimen/padding">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{detail.name}"
                                android:textAppearance="@android:style/TextAppearance.Material.Large"
                                tools:text="@sample/tools:full_names" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{StringUtils.convertGenres(detail.genres)}"
                                tools:text="@sample/tools:full_names" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{@string/rating(detail.voteAverage)}"
                                tools:text="@sample/tools:cities" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{@string/next_episode(detail.nextEpisode.season, detail.nextEpisode.episode, detail.nextEpisode.airDate)}"
                                android:visibility="@{detail.nextEpisode != null ? View.VISIBLE : View.GONE}"
                                tools:text="@sample/tools:date/mmddyy" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding"
                    app:contentPadding="@dimen/padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/overview"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <TextView
                            android:id="@+id/overview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{detail.overview}"
                            tools:text="@sample/tools:lorem/random" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding"
                    app:contentPadding="@dimen/padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seasons"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding"
                    app:contentPadding="@dimen/padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/actors"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding"
                    app:contentPadding="@dimen/padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/similar"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>