<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/round_arrow_back_24"
            app:titleTextColor="@color/white"
            tools:title="@string/episode" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/thumbnail_height"
                    android:contentDescription="@string/backdrop_image"
                    android:scaleType="centerCrop"
                    tools:src="@sample/tools:backgrounds/scenic" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                app:contentPadding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_episode_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@sample/tools:full_names" />

                    <TextView
                        android:id="@+id/text_episode_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@sample/tools:date/mmddyy" />

                    <TextView
                        android:id="@+id/text_episode_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@sample/tools:lorem/random" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                app:contentPadding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/guests"
                        tools:text="@sample/tools:lorem" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_guest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>